# robot

./: .gitmodules  CMakeLists.txt
Client/: .clangd  BUILD.md  CMakeLists.txt
Client/inc/: gyroscope.hh  i2c_device.hh  logger.hh  servo_controller.hh  tcp_client.hh  transceiver.hh  vectors.hh  video_capture.hh
Client/src/: gyroscope.cc  i2c_device.cc  program.cpp  servo_controller.cc  tcp_client.cc  transceiver.cc  vectors.cc  video_capture.cc
Server/: .clangd  CMakeLists.txt
Server/inc/: language_model.hh  tcp_server.hh
Server/src/: language_model.cc  program.cpp  tcp_server.cc
Shared/: .clangd  CMakeLists.txt
Shared/inc/: logger.hh  packet.hh  socket_options.hh
Shared/src/: packet.cc  socket_options.cc  vectors.cc
cmake/: aarch64-linux-toolchain.cmake
